--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -34,10 +34,10 @@
                 <span class="inline-block ml-2 group-hover:translate-x-1 transition-transform">→</span>
             </a>
             <a 
-                href="#contact" 
+                href="https://docs.google.com/document/d/1UjSmwCdQMjwQhqbigvdJDR-D_qjFNMUesAri6jyLx_U/edit?usp=sharing" 
                 class="px-8 py-4 border-2 border-white/20 text-white font-semibold rounded-lg hover:bg-white/10 transition-all duration-300 hover:border-white/40"
             >
-                Download Resume
+                View Resume
             </a>
         </div>
         
